管理页面服务相关的代码