@@ -1,29 +1,26 @@
 package com.yxbear.sg.svc.play.impl;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
+import com.yxbear.sg.domain.SGConstant;
+import com.yxbear.sg.domain.mapper.gi.*;
+import com.yxbear.sg.domain.mapper.gi.ext.GiCityExtMapper;
+import com.yxbear.sg.domain.mapper.mem.MemCityBuildUpgradingMapper;
+import com.yxbear.sg.domain.model.cfg.CfgBuildingLevel;
+import com.yxbear.sg.domain.model.gi.*;
+import com.yxbear.sg.domain.model.mem.CMemCityBuildUpgrading;
+import com.yxbear.sg.domain.model.mem.MemCityBuildUpgrading;
+import com.yxbear.sg.svc.cfg.FrameCfgSvc;
+import com.yxbear.sg.svc.play.DerateSvc;
+import com.yxbear.sg.svc.play.bean.*;
 import org.springframework.stereotype.Service;
 
 import com.yxbear.core.CommUtils;
 import com.yxbear.sg.domain.SystemUtils;
 import com.yxbear.sg.domain.mapper.cfg.CfgGoodsMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCityBuildMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCityDefenceMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCityMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCityResourceAddMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCityResourceMapper;
-import com.yxbear.sg.domain.mapper.gi.GiCitySoldierMapper;
 import com.yxbear.sg.domain.model.cfg.CCfgGoods;
 import com.yxbear.sg.domain.model.cfg.CfgGoods;
-import com.yxbear.sg.domain.model.gi.CGiCityBuild;
-import com.yxbear.sg.domain.model.gi.CGiCityDefence;
-import com.yxbear.sg.domain.model.gi.CGiCitySoldier;
-import com.yxbear.sg.domain.model.gi.GiCity;
 import com.yxbear.sg.svc.play.CommQuerySvc;
-import com.yxbear.sg.svc.play.bean.CityBuilding;
-import com.yxbear.sg.svc.play.bean.CityInfo;
 
 import lombok.RequiredArgsConstructor;
 
@@ -37,8 +34,15 @@ public class CommQuerySvcImpl implements CommQuerySvc {
     final GiCityBuildMapper buildMapper;
     final GiCityDefenceMapper defMapper;
     final GiCitySoldierMapper soldierMapper;
+    final GiCityHeroMapper heroMapper;
+    private final GiCityExtMapper giCityExtMapper;
 
+    final MemCityBuildUpgradingMapper mbMapper;
+
+    final FrameCfgSvc cfgSvc;
     final CfgGoodsMapper goodsMapper;
+    final DerateSvc derateSvc;
+
 
     @Override
     public CityInfo getCityInfo(int cid) {
@@ -47,19 +51,38 @@ public class CommQuerySvcImpl implements CommQuerySvc {
             return null;
         }
         CityInfo info = SystemUtils.copy(city, CityInfo.class);
+
+        info.setHeros(heroMapper.queryList(CGiCityHero.builder().cityId(cid).build(), "name"));
+
         info.setRes(resMapper.selectById(cid));
         info.setResAdd(resAddMapper.selectById(cid));
         info.getBuildings().addAll(
                 buildMapper.queryList(CGiCityBuild.builder().cityId(cid).build(), "pos").stream()
                         .map(b -> SystemUtils.copy(b, CityBuilding.class)).toList());
+        Integer[] bids = info.getBuildings().stream().filter(b -> b.getStatus() != 0).map(GiCityBuild::getId).toArray(Integer[]::new);
+
+        if (bids.length != 0) {
+            Map<Integer, MemCityBuildUpgrading> idMap = new HashMap<>();
+            mbMapper.queryList(CMemCityBuildUpgrading.builder().ids(bids).build(), "id")
+                    .forEach(b -> idMap.put(b.getId(), b));
+            info.getBuildings().forEach(b -> {
+                MemCityBuildUpgrading memCityBuildUpgrading = idMap.get(b.getId());
+                if (memCityBuildUpgrading != null) {
+                    b.setGoalLv(memCityBuildUpgrading.getGoalLv());
+                    b.setEndTime(memCityBuildUpgrading.getEndTime());
+                }
+            });
+        }
+
         info.getSoldiers().addAll(
                 soldierMapper.queryList(CGiCitySoldier.builder().cityId(cid).build(), "id"));
         info.getDefences().addAll(
                 defMapper.queryList(CGiCityDefence.builder().cityId(cid).build(), "id"));
-        int lv = info.getBuildings().get(0).getLv();
+        int lv = info.getBuildings().getFirst().getLv();
         info.setMaxOuterBuild(20 + lv * 3);
         return info;
     }
+
 
     @Override
     public List<CfgGoods> getGoods(Collection<Integer> ids) {
@@ -68,5 +91,31 @@ public class CommQuerySvcImpl implements CommQuerySvc {
         }
         return goodsMapper.queryList(CCfgGoods.builder().ids(ids.toArray(Integer[]::new)).build(), "id");
     }
+
+    @Override
+    public CityBuildingList getCityBuildUpgradeInfo(int cid, Boolean inner) {
+        GiCity city = cityMapper.selectById(cid);
+        SystemUtils.checkEmpty(city, "城池");
+        final int playId = city.getPlayId();
+        Long heroAffairs = giCityExtMapper.getCityChiefHeroAffairs(cid);
+
+
+        List<CityBuildingUseRes> res = new ArrayList<>();
+        cfgSvc.getGlobalCfg().getBuildingsMap().forEach((bid, b) -> {
+            if (inner == null || inner && b.getPlace() == 1 || !inner && b.getPlace() == 0) {
+                CfgBuildingLevel goalLv = b.getAndCheckLv(1);
+                UseRes useRes = derateSvc.derateRes(playId, heroAffairs, goalLv, UseRes.from(goalLv));
+                CityBuildingUseRes cityBuildingUseRes = new CityBuildingUseRes(b, goalLv.getLevel(), useRes);
+                res.add(cityBuildingUseRes);
+            }
+        });
+        res.sort(Comparator.comparingInt(CityBuildingUseRes::getId));
+
+        CityBuildingList result = new CityBuildingList();
+        result.setBuildings(res);
+
+        return result;
+    }
+
 
 }
